# stellovault

./: README.md
backend/: .env.example  Cargo.toml  README.md  docker-compose.yml
backend/migrations/: 001_create_escrows.sql  002_create_collateral.sql  003_create_loans.sql  003_create_oracles.sql  004_create_auth_tables.sql  004_create_governance.sql  004_create_indexer_state.sql  005_create_oracle_events.sql
backend/src/: app_state.rs  governance_service.rs  handlers.rs  lib.rs  loan.rs  loan_service.rs  main.rs  oracle_service.rs  routes.rs
backend/src/auth/: crypto.rs  jwt.rs  mod.rs  service.rs
backend/src/collateral/: indexer.rs  mod.rs  model.rs  service.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/error/: mod.rs
backend/src/escrow/: event_listener.rs  mod.rs  model.rs  service.rs
backend/src/handlers/: analytics.rs  auth.rs  collateral.rs  escrow.rs  mod.rs  oracle.rs  risk.rs  user.rs  wallet.rs
backend/src/indexer/: handlers.rs  mod.rs  types.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limiter.rs  security.rs  tracing.rs
backend/src/models/: auth.rs  mod.rs
backend/src/oracle/: mod.rs  model.rs  rate_limiter.rs  service.rs
backend/src/routes/: analytics.rs  auth.rs  collateral.rs  escrow.rs  loan.rs  mod.rs  oracle.rs  risk.rs  user.rs  wallet.rs
backend/src/services/: analytics.rs  mod.rs  risk_engine.rs  user.rs
backend/src/state/: app_state.rs  mod.rs
backend/src/websocket/: mod.rs
backend/tests/: escrow_consistency_tests.rs  risk_engine_tests.rs
contracts/: Cargo.toml  (+2 more)
server/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  migration_issues.md  package-lock.json  package.json  test-websocket.js  tsconfig.json  websocket-client-test.js
server/prisma/: schema.prisma  seed.ts
server/scripts/: test-wallet-flow.js
server/src/: app.ts  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  services.rs  utils.rs
server/src/config/: contracts.ts  env.ts  errors.ts
server/src/controllers/: auth.controller.ts  collateral.controller.ts  escrow.controller.ts  governance.controller.ts  loan.controller.ts  oracle.controller.ts  risk.controller.ts  user.controller.ts  wallet.controller.ts
server/src/middleware/: auth.middleware.ts  error.middleware.ts  rate-limit.middleware.ts  request-trace.middleware.ts
server/src/routes/: analytics.routes.ts  auth.routes.ts  collateral.routes.ts  confirmation.routes.ts  escrow.routes.ts  governance.routes.ts  loan.routes.ts  oracle.routes.ts  risk.routes.ts  user.routes.ts  wallet.routes.ts
server/src/services/: auth.service.ts  blockchain.service.ts  contract.service.ts  database.service.ts  escrow.service.ts  event-monitoring.service.ts  governance.service.ts  loan.service.ts  user.service.ts  websocket.service.ts
(+101 files in other folders)
